feat: Add Get Image API Enhance Post Image Response
